  Bug#10504   Character set does not support traditional mode ctype_utf8.result, ctype_utf8.test:   adding test case. password.c, mysql_com.h   Changeing octet2hex availability from static to public. item_strfunc.cc:   Result string is now checked to be well-formed.   Warning/error is generated, depending on sql_mode.